--- a/app/src/main/res/layout/activity_exoplayer.xml
+++ b/app/src/main/res/layout/activity_exoplayer.xml
@@ -16,7 +16,7 @@
         android:layout_height="60dp"
         android:layout_marginLeft="100dp"
         android:id="@+id/play"
-        android:text="codec播放"/>
+        android:text="exo播放"/>
 
     <SurfaceView
         android:layout_width="match_parent"
