--- a/app/src/main/res/layout/activity_gl_camera_pic.xml
+++ b/app/src/main/res/layout/activity_gl_camera_pic.xml
@@ -9,17 +9,11 @@
     <Button
         android:layout_width="80dp"
         android:layout_height="60dp"
-        android:id="@+id/selectvideo"
-        android:text="选择视频"/>
-    <Button
-        android:layout_width="80dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="100dp"
-        android:id="@+id/play"
-        android:text="glpicture"/>
+        android:id="@+id/shot"
+        android:text="拍照"/>
 
-    <android.opengl.GLSurfaceView
+    <com.example.multimedia.CameraTextureView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/glSfView"/>
+        android:id="@+id/texture_view"/>
 </RelativeLayout>
