--- a/app/src/main/res/layout/activity_mediacodecmediaextractor.xml
+++ b/app/src/main/res/layout/activity_mediacodecmediaextractor.xml
@@ -9,20 +9,9 @@
     <Button
         android:layout_width="80dp"
         android:layout_height="60dp"
-        android:id="@+id/selectvideo"
-        android:text="选择视频"/>
-    <Button
-        android:layout_width="80dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="0dp"
         android:id="@+id/play"
-        android:text="codec播放"/>
-    <Button
-        android:layout_width="80dp"
-        android:layout_height="60dp"
-        android:layout_marginLeft="200dp"
-        android:id="@+id/release"
-        android:text="codec停止"/>
+        android:text="播放"/>
 
     <SurfaceView
         android:layout_width="match_parent"
