--- a/app/src/main/res/layout/activity_fbo.xml
+++ b/app/src/main/res/layout/activity_fbo.xml
@@ -15,5 +15,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <android.opengl.GLSurfaceView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/glSurfaceView"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
